--- a/catalog/catalog.css
+++ b/catalog/catalog.css
@@ -12,7 +12,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  width: 1920px;
   height: 75px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -443,10 +442,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 12%;
+  /* height: 12%; */
   background-color: #000;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
 }
 
 .sign {
@@ -458,5 +457,129 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+@media screen {
+  .header {
+    height: 1.5%;
+    width: 100%;
+    background-color: #222;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 0%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+  }
+  .menu {
+    position: relative;
+    margin-left: 0%;
+    background-color: #222;
+    -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+    border: 0;
+  }
+  .midBox {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo {
+    left: 1%;
+    position: relative;
+    width: 44px;
+    height: 38px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+  .search {
+    position: relative;
+    width: 26.002px;
+    left: 5%;
+    height: 26.792px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+  .menu {
+    position: relative;
+    left: 10%;
+    background-color: #222;
+    -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+    border: 0;
+  }
+  .account {
+    left: 15%;
+    position: relative;
+    background-color: #222;
+    border: 0;
+    -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+  }
+  .cart {
+    position: relative;
+    background-color: #222;
+    border: 0;
+    -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+    left: 20%;
+  }
+  .products {
+    /* background-color: #F1E4E6; */
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 93%;
+    /* flex-shrink: 0; */
+    /* margin-left: 15%; */
+    border: 1px;
+    border-color: #ff6a6a;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .thing {
+    /* background-color: #F1E4E6; */
+    top: 2%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 62.5%;
+    margin: 4%;
+    height: 16%;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    /* fill: #F8F8F8; */
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    position: relative;
+  }
 }
 /*# sourceMappingURL=catalog.css.map */
