--- a/catalog/catalog.scss
+++ b/catalog/catalog.scss
@@ -8,7 +8,6 @@ body{
 .header{ 
 display: flex;
 position: relative;
-width: 1920px;
 height: 75px;
 flex-shrink: 0;
 background-color: #222;
@@ -355,4 +354,96 @@ display: none;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+@media screen {
+    .header{
+        height: 1.5%;
+        width: 100%;
+        background-color: #222;
+        align-items: center;
+        gap: 0%;
+        display: flex;
+        position: relative;
+        
+    }
+    .menu {
+        position: relative;
+        margin-left: 0%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;}
+    .midBox{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo{
+        left: 1%;
+        
+        position: relative;
+        width: 44px;
+        height: 38px;
+        flex-shrink: 0;
+    }
+    .search{
+        
+        position: relative;
+        width: 26.002px;
+        left: 5%;
+        height: 26.792px;
+        flex-shrink: 0;
+    }
+    .menu{
+        position: relative;
+        left: 10%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;
+    }
+   
+    .account{
+        left: 15%;
+        position: relative;
+        background-color: #222;
+        border: 0;
+        transition-duration: 0.4s;
+    }
+    .cart{
+        position: relative;
+        background-color: #222;
+        border: 0;
+        transition-duration: 0.4s;
+        left: 20%;
+    }
+    .products{
+        /* background-color: #F1E4E6; */
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: 93%;
+        /* flex-shrink: 0; */
+        /* margin-left: 15%; */
+        border: 1px;
+        border-color: #ff6a6a;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .thing{
+        /* background-color: #F1E4E6; */
+        top: 2%;
+        display: flex;
+        width: 62.5%;
+        margin: 4%;
+        height: 16%;
+        flex-shrink: 0;
+        /* fill: #F8F8F8; */
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: row;
+        position: relative;
+    }
+    
 }
