--- a/task6/index.css
+++ b/task6/index.css
@@ -128,7 +128,6 @@ body {
 }
 
 .rectangle {
-  margin-top: 10%;
   background: #F16D7F;
   width: 12px;
   height: 92px;
@@ -592,7 +591,7 @@ body {
   line-height: normal;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen {
   body {
     margin: 0;
   }
@@ -651,6 +650,7 @@ body {
   .search {
     position: relative;
     width: 26.002px;
+    left: 5%;
     height: 26.792px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
@@ -662,20 +662,6 @@ body {
     -webkit-transition-duration: 0.4s;
             transition-duration: 0.4s;
     border: 0;
-  }
-  .linkMenu {
-    border: 1px;
-    border-color: #ff6a6a;
-    border-collapse: collapse;
-    display: none;
-  }
-  .tallMenu {
-    display: none;
-    padding: 15px;
-    border-color: #ff6a6a;
-    position: relative;
-    right: 29%;
-    top: 148%;
   }
   .account {
     left: 15%;
@@ -711,7 +697,7 @@ body {
   .rectangle {
     position: relative;
     top: 1%;
-    right: 59%;
+    right: 9%;
     background: #F16D7F;
     width: 2%;
     height: 30%;
@@ -728,12 +714,12 @@ body {
     font-style: normal;
     font-weight: 900;
     line-height: normal;
-    right: 59%;
+    right: 9%;
     margin: 0;
   }
   .OF_LUXERIOUS {
     position: relative;
-    right: 59.5%;
+    right: 9.5%;
     top: 18.5%;
     height: 32px;
     color: #222;
@@ -746,7 +732,7 @@ body {
   }
   .FASHION {
     position: relative;
-    right: 99%;
+    right: 29%;
     top: 39.5%;
     height: 6%;
     color: #F16D7F;
@@ -1129,540 +1115,53 @@ body {
   }
 }
 
-@media screen and (max-width: 1000px) {
-  body {
-    margin: 0;
-  }
-  .box {
-    width: 100%;
-    height: 4500px;
-  }
-  .header {
-    height: 1.5%;
-    width: 100%;
-    background-color: #222;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 0%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative;
-  }
-  .menu {
-    position: relative;
-    margin-left: 0%;
-    background-color: #222;
-    -webkit-transition-duration: 0.4s;
-            transition-duration: 0.4s;
-    border: 0;
-  }
-  .midBox {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: wrap;
+/*@media screen  {
+    .header{
+        height: 1.5%;
+        width: 100%;
+        background-color: #222;
+        align-items: center;
+        gap: 0%;
+        display: flex;
+        position: relative;
+        
+    }
+    .menu {
+        position: relative;
+        margin-left: 0%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;}
+    .midBox{
+        display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
-    -ms-flex-line-pack: center;
         align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .logo {
-    left: 1%;
-    position: relative;
-    width: 44px;
-    height: 38px;
-    -ms-flex-negative: 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo{
+        left: 1%;
+        
+        position: relative;
+        width: 44px;
+        height: 38px;
         flex-shrink: 0;
-  }
-  .search {
-    position: relative;
-    width: 26.002px;
-    height: 26.792px;
-    -ms-flex-negative: 0;
+    }
+    .search{
+        
+        position: relative;
+        width: 26.002px;
+        
+        height: 26.792px;
         flex-shrink: 0;
-  }
-  .menu {
-    position: relative;
-    left: 10%;
-    background-color: #222;
-    -webkit-transition-duration: 0.4s;
-            transition-duration: 0.4s;
-    border: 0;
-  }
-  .linkMenu {
-    border: 1px;
-    border-color: #ff6a6a;
-    border-collapse: collapse;
-    display: none;
-  }
-  .tallMenu {
-    display: none;
-    padding: 15px;
-    border-color: #ff6a6a;
-    position: relative;
-    right: 29%;
-    top: 148%;
-  }
-  .account {
-    left: 15%;
-    position: relative;
-    background-color: #222;
-    border: 0;
-    -webkit-transition-duration: 0.4s;
-            transition-duration: 0.4s;
-  }
-  .cart {
-    position: relative;
-    background-color: #222;
-    border: 0;
-    -webkit-transition-duration: 0.4s;
-            transition-duration: 0.4s;
-    left: 20%;
-  }
-  .background {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 8%;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    background-color: #F1E4E6;
-  }
-  .main_model {
-    position: relative;
-    height: 60%;
-    top: 40%;
-  }
-  .rectangle {
-    position: relative;
-    top: 1%;
-    right: 59%;
-    background: #F16D7F;
-    width: 2%;
-    height: 30%;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-  }
-  .THE_BRAND {
-    position: relative;
-    height: 10%;
-    top: -1%;
-    color: #222;
-    font-family: Lato;
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    right: 59%;
-    margin: 0;
-  }
-  .OF_LUXERIOUS {
-    position: relative;
-    right: 59.5%;
-    top: 18.5%;
-    height: 32px;
-    color: #222;
-    font-family: Lato;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin: 0;
-  }
-  .FASHION {
-    position: relative;
-    right: 99%;
-    top: 39.5%;
-    height: 6%;
-    color: #F16D7F;
-    font-family: Lato;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin: 0;
-  }
-  .position {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: url("img/womanMid.png");
-    margin: 4%;
-    width: 92%;
-    height: 260px;
-    background-color: rgba(33, 22, 22, 0.7);
-  }
-  .position2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: url("img/manMid2.png");
-    margin: 10px;
-    width: 92%;
-    height: 260px;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    background-color: rgba(33, 22, 22, 0.7);
-  }
-  .position3 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-image: url("img/manMid3.png");
-    margin: 10px;
-    width: 92%;
-    height: 260px;
-    background-color: rgba(33, 22, 22, 0.7);
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-  }
-  .position_wide {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: url("img/womanMid4.png");
-    margin: 10px;
-    width: 92%;
-    height: 180px;
-    background-color: rgba(33, 22, 22, 0.7);
-  }
-  .smallcontainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 6%;
-    margin: 10%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .midMain {
-    color: #F16D7F;
-    font-family: Lato;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-  .midText {
-    color: #FFF;
-    text-align: center;
-    font-family: Lato;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .items2 {
-    color: #5D5D5D;
-    font-family: Lato;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-  }
-  .products {
-    /* background-color: #F1E4E6; */
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 93%;
-    /* flex-shrink: 0; */
-    /* margin-left: 15%; */
-    border: 1px;
-    border-color: #ff6a6a;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .thing {
-    /* background-color: #F1E4E6; */
-    top: 2%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 62.5%;
-    margin: 4%;
-    height: 16%;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    /* fill: #F8F8F8; */
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    position: relative;
-  }
-  .woman2 {
-    background-color: #F1E4E6;
-  }
-  .title_and_price {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 360px;
-    padding: 24px 16px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    gap: 16px;
-  }
-  .title3 {
-    width: 148.114px;
-    color: #000;
-    font-family: Lato;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .price {
-    width: 52.457px;
-    color: #F16D7F;
-    font-family: Lato;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .description {
-    width: 314.743px;
-    color: #5D5D5D;
-    font-family: Lato;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-  }
-  .footer {
-    top: 2%;
-    position: relative;
-    height: 20%;
-  }
-  .pros {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 55%;
-    background-color: #000;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .pro {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .pros_name {
-    color: #FBFBFB;
-    font-family: Lato;
-    font-size: 19.96px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .e-mailSubs {
-    margin: 4%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 82%;
-    height: 50%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .photo_and_quote {
-    height: 45%;
-    width: 94%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .photo {
-    height: 94px;
-    width: 94px;
-    border-radius: 100px;
-  }
-  .quote {
-    color: #222224;
-    text-align: center;
-    font-family: Lato;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .e-mail {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .email {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    font-family: inherit;
-    border-radius: 100px;
-    height: 14%;
-  }
-  .SUBS {
-    margin: 0;
-    margin-top: 20%;
-    color: #222224;
-    text-align: center;
-    font-family: Lato;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 167.2%;
-  }
-  .subs {
-    margin: 0;
-    color: #222224;
-    font-family: Lato;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 167.2%;
-  }
-  .deep {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 10%;
-    background-color: #000;
-    -ms-flex-line-pack: center;
-        align-content: center;
-  }
-  .sign {
-    margin-left: 15%;
-    color: #FBFBFB;
-    font-family: Lato;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-}
+    }
+    .menu{
+        position: relative;
+        left: 10%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;
+    }
+}*/
 /*# sourceMappingURL=index.css.map */
