--- a/catalog/catalog.css
+++ b/catalog/catalog.css
@@ -442,10 +442,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  /* height: 12%; */
+  height: 12%;
   background-color: #000;
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
 }
 
 .sign {
