--- a/task6/index.css
+++ b/task6/index.css
@@ -13,7 +13,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  width: 1920px;
+  
   height: 75px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -30,7 +30,7 @@ body {
 }
 
 .search {
-  left: 65%;
+  left: 60%;
   position: relative;
   background-color: #222;
   border: 0;
@@ -40,7 +40,7 @@ body {
 
 .menu {
   position: relative;
-  left: 70%;
+  left: 65%;
   background-color: #222;
   -webkit-transition-duration: 0.4s;
           transition-duration: 0.4s;
@@ -52,32 +52,7 @@ body {
           box-shadow: 0 12px 16px 0 rgba(250, 245, 245, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
 }
 
-.linkMenu {
-  border: 1px;
-  border-color: #ff6a6a;
-  border-collapse: collapse;
-}
 
-.tallMenu {
-  height: 115%;
-  background: #fff;
-  left: 67%;
-  padding: 15px;
-  border-color: #ff6a6a;
-  position: relative;
-  right: 12%;
-  top: 75%;
-}
-
-.conteinerMenu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
 
 .account {
   left: 70%;
@@ -120,7 +95,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 1920px;
+  
   height: 764px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -131,6 +106,8 @@ body {
   background: #F16D7F;
   width: 12px;
   height: 92px;
+  top: 25%;
+  position: relative;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
@@ -320,7 +297,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  /* margin-left: 42%; */
+  position: relative;
 }
 
 .items2 {
@@ -336,7 +313,7 @@ body {
 }
 
 .products {
-  /* left: 15%; */
+   left: 6%; 
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -591,7 +568,7 @@ body {
   line-height: normal;
 }
 
-@media screen {
+@media screen and (width < 1025px) {
   body {
     margin: 0;
   }
@@ -638,6 +615,8 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    width: 52%;
+    left: 24%;
   }
   .logo {
     left: 1%;
@@ -761,7 +740,7 @@ body {
             align-items: center;
     background: url("img/womanMid.png");
     margin: 4%;
-    width: 92%;
+    width: 67%;
     height: 260px;
     background-color: rgba(33, 22, 22, 0.7);
   }
@@ -783,7 +762,7 @@ body {
             align-items: center;
     background: url("img/manMid2.png");
     margin: 10px;
-    width: 92%;
+    width: 67%;
     height: 260px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
@@ -807,7 +786,7 @@ body {
             align-items: center;
     background-image: url("img/manMid3.png");
     margin: 10px;
-    width: 92%;
+    width: 67%;
     height: 260px;
     background-color: rgba(33, 22, 22, 0.7);
     -ms-flex-negative: 0;
@@ -874,6 +853,7 @@ body {
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+    margin: 0;
   }
   .products {
     /* background-color: #F1E4E6; */
@@ -881,7 +861,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
     height: 93%;
     /* flex-shrink: 0; */
     /* margin-left: 15%; */
@@ -1164,4 +1143,38 @@ body {
         border: 0;
     }
 }*/
+@media screen and (width < 500px) {
+  
+  .rectangle{
+    right: 50%;
+  }
+  .THE_BRAND{
+    right: 50%;
+    font-size: 30px;
+    
+  }
+  .OF_LUXERIOUS{
+    right: 65%;
+  }
+  .FASHION{
+    right: 80%;
+  }
+  .midBox{
+    left: 0;
+    width: 100%;
+  }
+  .products{
+    width: 100%;
+    left: 0;
+  }
+  .thing{
+    width: 62.5%;
+    margin: 10%;
+    
+  }
+  .thing-img , .woman2{
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=index.css.map */
