--- a/task6/index.scss
+++ b/task6/index.scss
@@ -248,7 +248,7 @@ top: 75%;
     margin-bottom: 10px;
 }
 .products{
-    /* left: 15%; */
+     left: 15%; 
     position: relative;
     display: flex;
     width: 80%;
@@ -423,7 +423,7 @@ line-height: normal;
     font-weight: 400;
     line-height: normal;
 }
-@media screen {
+@media screen and (width < 1025px) {
     body{
         margin: 0;
     }
@@ -454,6 +454,8 @@ line-height: normal;
         align-content: center;
         justify-content: center;
         align-items: center;
+        width: 52%;
+        left: 24%;
     }
     .logo{
         left: 1%;
@@ -561,7 +563,7 @@ line-height: normal;
         align-items: center;
         background: url("img/womanMid.png");
         margin: 4%;
-        width: 92%;
+        width: 67%;
         height: 260px;
         background-color: rgba(33, 22, 22, 0.70);
     }
@@ -573,7 +575,7 @@ line-height: normal;
         align-items: center;
         background: url("img/manMid2.png");
         margin: 10px;
-        width: 92%;
+        width: 67%;
         height: 260px;
         flex-shrink: 0;
         background-color: rgba(33, 22, 22, 0.70);
@@ -586,7 +588,7 @@ line-height: normal;
         align-items: center;
         background-image: url("img/manMid3.png");
         margin: 10px;
-        width: 92%;
+        width: 67%;
         height: 260px;
         background-color: rgba(33, 22, 22, 0.70);
         flex-shrink: 0;
@@ -635,7 +637,7 @@ line-height: normal;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
-       
+       margin: 0;
     }
     .products{
         /* background-color: #F1E4E6; */
