--- a/js/style.css
+++ b/js/style.css
@@ -1,7 +1,30 @@
+body{
+    display: flex;
+    justify-content: center;
+}
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 100px ;
+    width: 500px;
+    background-color: rgb(230, 141, 195);
+    left: 50%;
+    border-radius: 60px;
+}
+.fas{
+        
+    position: relative;
+    
+    width: 50px;
+    height: 50px;
+
+}
+.volume{
+    background: #555;
+    position: relative;
+    left: 35%;
+    bottom: 25%;
+    border-radius: 100px;
 }
